[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "included"
version = "0.2.0"
description = "Modular File Inclusion (LFI/RFI) scanner — for authorized security testing only."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["aiohttp>=3.9"]

[project.urls]
Repository = "https://github.com/JJuly02/INCLUDED"

[project.scripts]
included = "included.cli:main"

[tool.setuptools]
packages = ["included", "included.modules"]
package-dir = { "included" = ".", "included.modules" = "modules" }

[tool.setuptools.package-data]
included = ["wordlists/*.txt"]
