[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "included"
version = "0.5.0"
description = "Modular File Inclusion (LFI/RFI) scanner — for authorized security testing only."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["aiohttp>=3.9"]

[project.urls]
Repository = "https://github.com/JJuly02/INCLUDED"

[project.scripts]
included = "included.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
included = ["wordlists/*.txt"]
